--- a/html/first.html
+++ b/html/first.html
@@ -2,10 +2,35 @@
 <html>
     <head>
         <title>NareshiIt</title>
+        <link href="images/nareshit.jpeg" rel="icon"/>
     </head>
     <body>
         <center>
             <h1>Developer Funnel</h1> 
         </center>
+        <p>
+            1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+        </p>
+        <img src="images/manali.jpeg" alt="manali Image" title="Solang Vally"/>
+        <p>
+            2 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+        </p>
+        <span>
+            1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+        </span>
+        <span>
+            2 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+        </span>
+        <p style="background-color:red">This is P Tag</p>
+        <p style="background-color:skyblue">This is P Tag</p>
+
+        <span style="background-color:orange">This is span Tag</span>
+        <span style="background-color:lightseagreen">This is span Tag</span>
+        <h1>Developer Funnel</h1> 
+        <h2>Developer Funnel</h2> 
+        <h3>Developer Funnel</h3> 
+        <h4>Developer Funnel</h4> 
+        <h5>Developer Funnel</h5> 
+        <h6>Developer Funnel</h6> 
     </body>
 </html>
