--- a/html/first.html
+++ b/html/first.html
@@ -5,12 +5,18 @@
         <link href="images/nareshit.jpeg" rel="icon"/>
     </head>
     <body>
-        <center>
-            <h1>Developer Funnel</h1> 
-        </center>
+        <header>
+            <center>
+                <h1>Developer Funnel</h1> 
+                <a href="second.html">Second</a>
+                <a href="https://www.facebook.com/aakash.handa.14/" target="_blank">Facebook</a>
+            </center>
+        </header>
+        <hr/>
         <p>
             1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
         </p>
+        <br/>
         <img src="images/manali.jpeg" alt="manali Image" title="Solang Vally"/>
         <p>
             2 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
@@ -33,4 +39,10 @@
         <h5>Developer Funnel</h5> 
         <h6>Developer Funnel</h6> 
     </body>
+    <hr/>
+    <footer>
+        <center>
+            <h3>&copy; Developer Funnel  &hearts; &spades; &LeftArrowRightArrow; </h3>
+        </center>
+    </footer>
 </html>
