--- a/html/second.html
+++ b/html/second.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <title>Second Page</title>
+        <meta name="description" content="description view under website name on search engine">
+        <meta name="keywords" content="Aakash aakashhanda Aakash Handa">
+        <meta name="author" content="Developer Funnel">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
@@ -16,9 +20,13 @@
             <center>
                 <h2>Manali</h2>
                 <p>
-                   Manali is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                   <i>Manali</i> is simply dummy <b>text</b> of the printing and typesetting industry. <u>Lorem</u> Ipsum has been the <strong>industry's </strong>standard dummy text ever since the 1500s, <strike>when</strike> an unknown printer took a galley of type and <del>scrambled</del> it to make a type specimen book. It has survived not only five centuries.
                 </p>
-                <img src="images/manali.jpeg" alt="manali"/>
+                <figure>
+                    <img src="images/manali.jpeg" alt="manali"/>
+                    <figcaption>Solang Vally</figcaption>
+                </figure>
+                
             </center>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
@@ -26,6 +34,18 @@
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
             </p>
+            <details>
+                <summary>More Details</summary>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                </p>
+            </details>
+            <details>
+                <summary>Hotel Locations</summary>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                </p>
+            </details>
         </div>
         <hr/>
         <!--Amsterdam Div Start-->
@@ -45,7 +65,7 @@
             </p>
         </div>
         <hr/>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9931.776359732392!2d-0.07200065519554676!3d51.51424172417871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876034add2a4013%3A0x260eae2ed0510822!2sWhitechapel%2C%20London%2C%20UK!5e0!3m2!1sen!2sin!4v1655776973929!5m2!1sen!2sin" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
         <hr/>
         <footer>
             <center>
