--- a/html/first.html
+++ b/html/first.html
@@ -38,6 +38,17 @@
         <h4>Developer Funnel</h4> 
         <h5>Developer Funnel</h5> 
         <h6>Developer Funnel</h6> 
+        <audio width="49%" height="300" controls muted loop>
+            <source src="images/diljit.mp4" type="video/mp4"/>
+        </audio>
+        <!--Own Video-->
+        <video width="49%" height="300" controls muted loop poster="images/thumb.png">
+            <source src="images/diljit.mp4" type="video/mp4"/>
+        </video>
+
+        <!--- Youtube Video-->
+        <iframe width="50%" height="300" src="https://www.youtube.com/embed/4sNfipi19go?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9931.776359732392!2d-0.07200065519554676!3d51.51424172417871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876034add2a4013%3A0x260eae2ed0510822!2sWhitechapel%2C%20London%2C%20UK!5e0!3m2!1sen!2sin!4v1655776973929!5m2!1sen!2sin" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </body>
     <hr/>
     <footer>
