--- a/html/second.html
+++ b/html/second.html
@@ -7,16 +7,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <header>
-            <center>
-                <h1>Second Page</h1>
-                <a href="first.html">First</a>
-                <a href="https://www.facebook.com/aakash.handa.14/" target="_blank">Facebook</a>
-            </center>
-        </header>
+        <section id="header">
+            <header>
+                <center>
+                    <h1>Second Page</h1>
+                    <a href="first.html">First</a>
+                    <a href="https://www.facebook.com/aakash.handa.14/" target="_blank">Facebook</a>
+                    <hr/>
+                    <a href="#manali">Manali</a>
+                    <a href="#amsterdam">Asmterdam</a>
+                </center>
+            </header>
+        </section>
         <hr/>
         <!--Manali Div Start-->
-        <div>
+        <section id="manali">
             <center>
                 <h2>Manali</h2>
                 <p>
@@ -46,10 +51,22 @@
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
                 </p>
             </details>
-        </div>
+            <p>
+                Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+            </p>
+            <p>
+                Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+            </p>
+            <p>
+                Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+            </p>
+            <p>
+                Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+            </p>
+        </section>
         <hr/>
         <!--Amsterdam Div Start-->
-        <div>
+        <section id="amsterdam">
             <center>
                 <h2>Amsterdam</h2>
                 <p>
@@ -63,13 +80,26 @@
             <p>
                 Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
             </p>
-        </div>
+            <p>
+                Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+            </p>
+            <p>
+                Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+            </p>
+            <p>
+                Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+            </p>
+            <p>
+                Amsterdam is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+            </p>
+        </section>
         <hr/>
         
         <hr/>
         <footer>
             <center>
                 <h3>&copy; Developer Funnel  &hearts; &spades; &LeftArrowRightArrow; </h3>
+                <a href="#header">Back To Top</a>
             </center>
         </footer>
     </body>
