--- a/css/inline.html
+++ b/css/inline.html
@@ -1,38 +1,37 @@
 <html>
     <head>
         <title>Css Code</title>
-        <link rel="stylesheet" href="first.css"/>
     </head>
     <body>
         <header>
-            <h1>Developer City</h1>
+            <h1 style="text-align:center">Developer City</h1>
         </header>
         <hr/>
-        <h1 id="subHeading">About City</h1>
-        <div class="card">
-            <img src="image/amsterdam.jpeg" alt="amsterdam"/>
-            <h2 class="cardHeading">Amsterdam</h2>
+        
+        <div style="height:450px;background-color:#cb8774;width:21%;float:left;margin-left:2%">
+            <img src="image/amsterdam.jpeg" alt="amsterdam" style="height:200px;width:100%"/>
+            <h2 style="text-align:center">Amsterdam</h2>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
             </p>
         </div>
-        <div class="card bluegray">
-            <img src="image/manali.jpeg" alt="amsterdam"/>
-            <h2>Manali</h2>
+        <div style="height:450px;background:#9cb4c0;width:21%;float:left;margin-left:2%">
+            <img src="image/manali.jpeg" alt="amsterdam" style="height:200px;width:100%"/>
+            <h2 style="text-align:center">Manali</h2>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
             </p>
         </div>
-        <div class="card" id="brown">
-            <img src="image/london.jpeg" alt="amsterdam"/>
-            <h2>London</h2>
+        <div style="height:450px;background:#847767;width:21%;float:left;margin-left:2%">
+            <img src="image/london.jpeg" alt="amsterdam" style="height:200px;width:100%"/>
+            <h2 style="text-align:center">London</h2>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
             </p>
         </div>
-        <div class="card blue">
-            <img src="image/helsinki.jpeg" alt="amsterdam"/>
-            <h2>Helsinki</h2>
+        <div style="height:450px;background:#3676a2;width:21%;float:left;margin-left:2%">
+            <img src="image/helsinki.jpeg" alt="amsterdam" style="height:200px;width:100%"/>
+            <h2 style="text-align:center">Helsinki</h2>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
             </p>
