--- a/css/styleTag.html
+++ b/css/styleTag.html
@@ -1,7 +1,39 @@
 <html>
     <head>
         <title>Css Code</title>
-        <link rel="stylesheet" href="first.css"/>
+        <style>
+            h1{
+                text-align:center
+            }
+            
+            .card{
+                height:400px;
+                background-color:#cb8774;
+                width:21%;
+                float:left;
+                margin-left:3%
+            }
+            .bluegray{
+                background-color:#9cb4c0
+            }
+            #subHeading{
+                text-align:left
+            }
+            .card > img {
+                height:200px;
+                width:100%
+            }
+            .card h2{
+                text-align:center
+            }
+            #brown{
+                background:#847767
+            }
+            .blue{
+                background:#3676a2
+            }
+            
+        </style>
     </head>
     <body>
         <header>
