--- a/css/first.html
+++ b/css/first.html
@@ -8,46 +8,42 @@
             <h1>Developer City</h1>
         </header>
         <hr/>
-        <h1 id="subHeading">About City</h1>
-        <div class="card">
-            <img src="image/amsterdam.jpeg" alt="amsterdam"/>
-            <h2 class="cardHeading">Amsterdam</h2>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
-            </p>
+        <div id="mainContainer">
+            <div class="card">
+                <img src="image/amsterdam.jpeg" alt="amsterdam"/>
+                <h2 class="cardHeading">Amsterdam</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                </p>
+            </div>
+            <div class="card bluegray">
+                <img src="image/manali.jpeg" alt="amsterdam"/>
+                <h2>Manali</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                </p>
+            </div>
+            <div class="card" id="brown">
+                <img src="image/london.jpeg" alt="amsterdam"/>
+                <h2>London</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                </p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                </p>
+            </div>
+            <div class="card blue">
+                <img src="image/helsinki.jpeg" alt="amsterdam"/>
+                <h2>Helsinki</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                </p>
+            </div>
         </div>
-        <div class="card bluegray">
-            <img src="image/manali.jpeg" alt="amsterdam"/>
-            <h2>Manali</h2>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
-            </p>
-        </div>
-        <div class="card" id="brown">
-            <img src="image/london.jpeg" alt="amsterdam"/>
-            <h2>London</h2>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
-            </p>
-        </div>
-        <div class="card blue">
-            <img src="image/helsinki.jpeg" alt="amsterdam"/>
-            <h2>Helsinki</h2>
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
-            </p>
-        </div>
-
-        <!-- <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
-        </p>
-        <div style="height:100px;background-color:orange;width:100%"></div>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
-        </p> -->
-        <!-- <hr/>
+        <hr/> 
         <footer>
             <h3 style="text-align:center">&copy; Developer Funnel</h3>
-        </footer> -->
+        </footer>
     </body>
 </html>
