--- a/css/homepage/home.html
+++ b/css/homepage/home.html
@@ -22,7 +22,26 @@
             </div>
         </header>
         <!--Search-->
-        <div id="search"></div>
+        <div id="search">
+            <div id="logo">
+                <span>D!</span>
+            </div>
+            <div id="heading">
+                Search Place Near To You
+            </div>
+            <div id="dropdown">
+                <select>
+                    <option>----SELECT Your City----</option>
+                    <option>Delhi</option>
+                    <option>Mumbai</option>
+                </select>
+                <select id="restaurants">
+                    <option>----SELECT Your Restaurants----</option>
+                    <option>Wow Momos</option>
+                    <option>Park Blue</option>
+                </select>
+            </div>
+        </div>
         <!--Quick Search-->
         <div id="quicksearch"></div>
         <!--Footer-->
