--- a/css/homepage/home.html
+++ b/css/homepage/home.html
@@ -43,7 +43,94 @@
             </div>
         </div>
         <!--Quick Search-->
-        <div id="quicksearch"></div>
+        <div id="quicksearch">
+            <span id="quickHeading">
+                Quick Search
+            </span>
+            <span id="quickSubHeading">
+                Find Restaurants By MealType
+            </span>
+            <div class="mainBox">
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="images/drinks.png" alt="bombay"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="compHeading">
+                            <a href="../listing/listing.html">BreakFast</a>
+                        </div>
+                        <div class="compSubHeading">
+                            Best Deal For BreakFast
+                        </div>
+                    </div>
+                </div>  
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="images/chatkaz.jpg" alt="chatkaz"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="compHeading">
+                            <a href="../listing/listing.html">Lunch</a>
+                        </div>
+                        <div class="compSubHeading">
+                            Best Deal For Lunch
+                        </div>
+                    </div>
+                </div>  
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="images/dominos.png" alt="chatkaz"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="compHeading">
+                            <a href="../listing/listing.html">Lunch</a>
+                        </div>
+                        <div class="compSubHeading">
+                            Best Deal For Lunch
+                        </div>
+                    </div>
+                </div> 
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="images/dinner.png" alt="chatkaz"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="compHeading">
+                            <a href="../listing/listing.html">Lunch</a>
+                        </div>
+                        <div class="compSubHeading">
+                            Best Deal For Lunch
+                        </div>
+                    </div>
+                </div>  
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="images/nukkad_pe.jpg" alt="chatkaz"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="compHeading">
+                            <a href="../listing/listing.html">Lunch</a>
+                        </div>
+                        <div class="compSubHeading">
+                            Best Deal For Lunch
+                        </div>
+                    </div>
+                </div>  
+                <div class="tileContainer">
+                    <div class="tileComponent1">
+                        <img src="images/south.png" alt="chatkaz"/>
+                    </div>
+                    <div class="tileComponent2">
+                        <div class="compHeading">
+                            <a href="../listing/listing.html">Lunch</a>
+                        </div>
+                        <div class="compSubHeading">
+                            Best Deal For Lunch
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </div>
         <!--Footer-->
         <footer></footer>
     </body>
