--- a/css/details/details.html
+++ b/css/details/details.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Home Page</title>
-        <link rel="stylesheet" href="listing.css">
+        <link rel="stylesheet" href="details.css">
     </head>
     <body>
         <!--Header-->
@@ -23,17 +23,25 @@
         </header>
         <!--Search-->
         <div id="main">
-           <div id="filter">
-                <input type="radio"/>North Indian
-                <input type="checkbox"/>North Indian
+           <div id="imageDiv">
+                <img src="snacks.png" alt="wallpaper"/>
            </div>
-           <div id="list">
-               <div class="tile">
-                   <a href="../details/details.html">Details Page</a>
-               </div>
-               <div class="tile"></div>
-               <div class="tile"></div>
-               <div class="tile"></div>
+           <div id="content">
+              <h1>AMA Cafe</h1>
+              <span>231 Customers Rating Average</span>
+              <h3><del>Old Price: 320</del></h3>
+              <h3>New Price: ₹450.00</h3>
+              <h3>Best Taste of Fresh Chai with Samosa At your Door or DineIn</h3>
+              <div class="feature_container">
+                  <figure>
+                      <img src="https://i.ibb.co/wJvrhYg/veg.png" class="featureIcon"/>
+                      <figcaption>Pure Veg</figcaption>
+                  </figure>
+                  <figure>
+                    <img src="https://i.ibb.co/mD3jpgc/sentizied.png" class="featureIcon"/>
+                    <figcaption>Fully Senatized</figcaption>
+                </figure>
+              </div>
            </div>
         </div>
        
