--- a/css/homepage/home.html
+++ b/css/homepage/home.html
@@ -132,6 +132,27 @@
             </div>
         </div>
         <!--Footer-->
-        <footer></footer>
+        <footer>
+            <hr/>
+            <center>&copy; Developer Funnel</center>
+            <div class="footDiv">
+                <ul>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="footDiv">
+                <ul>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="footDiv noborder">
+                <ul>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
