--- a/bootstarp/first.html
+++ b/bootstarp/first.html
@@ -13,17 +13,58 @@
                 <p>
                     BootStrap is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
                 </p>
-                <button class="btn btn-primary">Click</button>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#devModal">Click</button>
                 <button class="btn btn-success btn-purple">Click</button>
                 <button class="btn btn-warning">Click</button>
                 <button class="btn btn-danger">Click</button>
                 <button class="btn btn-info">Click</button>
+            </div>
+            <div id="devModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Javascript Details</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                            </p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <hr/>
             <i class="fa-brands fa-facebook fb"></i>
             <span class="glyphicon glyphicon-trash del-icon"></span>
             <span class="glyphicon glyphicon-pencil edit-icon"></span>
             <hr/>
+            <div class="media">
+                <div class="media-left">
+                    <img src="foodWallpaper.png" class="media-object" style="width:200px"/>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">About Food</h4>
+                    <p>
+                        1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                    </p>
+                </div>
+            </div>
+            <div class="media">
+                <div class="media-body">
+                    <h4 class="media-heading">About Food</h4>
+                    <p>
+                        1 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.
+                    </p>
+                </div>
+                <div class="media-right">
+                    <img src="foodWallpaper.png" class="media-object" style="width:200px"/>
+                </div>
+                
+            </div>
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     Students
