--- a/bootstarp/second.html
+++ b/bootstarp/second.html
@@ -26,6 +26,30 @@
                 </div>
             </div>
         </nav>
+        <div id="devCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#devCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#devCarousel" data-slide-to="1"></li>
+                <li data-target="#devCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="foodWallpaper.png" alt="img"/>
+                </div>
+                <div class="item">
+                    <img src="travel.png" alt="img"/>
+                </div>
+                <div class="item">
+                    <img src="snacks.png" alt="img"/>
+                </div>
+            </div>
+            <a class="left carousel-control" href="#devCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control" href="#devCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
         
         
 
