--- a/bootstarp/bootstrap5.html
+++ b/bootstarp/bootstrap5.html
@@ -2,9 +2,13 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     </head>
     <body>
         <div class="container">
+            <hr/>
+            <i class="bi bi-fuel-pump-diesel"></i>
+            <i class="bi bi-facebook"></i>
             <hr/>
             <button class="btn btn-primary">Click</button>
             <button class="btn btn-success btn-purple">Click</button>
@@ -27,5 +31,9 @@
                 </span>
             </button>
         </div>
+        <div class="mt-1 p-3 w-50"></div>
+        <div class="mt-1 p-3 w-50"></div>
+        <div class="mt-1 p-3 w-50"></div>
+        <div class="mt-1 p-3 w-50"></div>
     </body>
 </html>
